# qiskit-state-evolution-recorder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
qiskit_state_evolution_recorder/: __init__.py  _recorder.py
src/qiskit_state_evolution_recorder/: __init__.py  __main__.py  animation.py  compability.py  compatibility.py  demo.qasm  frame_renderer.py  recorder.py  state_evolution.py
src/qiskit_state_evolution_recorder/backend/: __init__.py  backend.py  ffmpeg.py  opencv.py  selection.py
tests/: conftest.py  test_animation.py  test_backend.py  test_compability.py  test_compatibility.py  test_frame_renderer.py  test_recorder.py  test_state_evolution.py
