[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit_state_evolution_recorder"
version = "0.1.0"
description = "Simple module allowing to record animations to trace changes in qubit states for arbitrary quantum circuits."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "Dawid Ciepiela", email = "71898979+sarumaj@users.noreply.github.com" }
]
requires-python = ">=3.6, <3.12"

[project.urls]
"Homepage" = "https://github.com/sarumaj/qiskit-state-evolution-recorder"